// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataVersionSelect Displays empty when no versions available 1`] = `
<DataVersionSelect
  api={
    Object {
      "getWfModuleVersions": [Function],
      "setWfModuleVersion": [Function],
    }
  }
  isReadOnly={true}
  revision={202}
  setClickNotification={[Function]}
  testing={true}
  wfModuleId={808}
>
  <div
    className="version-item"
  >
    <div
      className="t-d-gray content-3 mb-2"
    >
      No data loaded
    </div>
    <div
      className="open-modal t-f-blue content-4 text-center"
    >
      -
    </div>
  </div>
</DataVersionSelect>
`;

exports[`DataVersionSelect Does not save selection when user hits Cancel 1`] = `
<DataVersionSelect
  api={
    Object {
      "getWfModuleVersions": [Function],
      "setWfModuleVersion": [Function],
    }
  }
  isReadOnly={false}
  revision={202}
  setClickNotification={[Function]}
  testing={true}
  wfModuleId={808}
>
  <div
    className="version-item"
  >
    <div
      className="t-d-gray content-3 mb-2"
    >
      Version 1 of 5
    </div>
    <div>
      <div
        className="open-modal t-f-blue content-4 text-center"
        onClick={[Function]}
      >
        Apr 10, 2017 - 05:57 PM
      </div>
      <Modal
        autoFocus={true}
        backdrop={true}
        backdropTransitionTimeout={150}
        className="modal-dialog"
        fade={true}
        isOpen={false}
        keyboard={true}
        modalTransitionTimeout={300}
        toggle={[Function]}
        zIndex={1050}
      />
    </div>
  </div>
</DataVersionSelect>
`;

exports[`DataVersionSelect Renders correctly when in Private mode, and selection is confirmed when user hits OK 1`] = `
<DataVersionSelect
  api={
    Object {
      "getWfModuleVersions": [Function],
      "setWfModuleVersion": [Function],
    }
  }
  isReadOnly={false}
  revision={202}
  setClickNotification={[Function]}
  testing={true}
  wfModuleId={808}
>
  <div
    className="version-item"
  >
    <div
      className="t-d-gray content-3 mb-2"
    >
      No data loaded
    </div>
    <div
      className="open-modal t-f-blue content-4 text-center"
    >
      -
    </div>
  </div>
</DataVersionSelect>
`;

exports[`DataVersionSelect Renders correctly when in Private mode, and selection is confirmed when user hits OK 2`] = `
<div
  className="modal-dialog modal-dialog"
  role="document"
>
  <div
    className="modal-content"
  >
    <ModalHeader
      tag="h4"
      toggle={[Function]}
      wrapTag="div"
    >
      <div
        className="modal-header"
      >
        <h4
          className="modal-title"
        >
          <div
            className=""
          >
            Dataset Versions
          </div>
        </h4>
        <button
          aria-label="Close"
          className="close"
          onClick={[Function]}
          type="button"
        >
          <span
            aria-hidden="true"
          >
            ×
          </span>
        </button>
      </div>
    </ModalHeader>
    <ModalBody
      className="list-body"
      tag="div"
    >
      <div
        className="list-body modal-body"
      >
        <div
          className=""
        >
          <div
            className="line-item-data list-test-class"
            onClick={[Function]}
          >
            <span
              className="content-3"
            >
              Jul 10, 2017 - 05:57 PM
            </span>
          </div>
          <div
            className="line-item-data list-test-class"
            onClick={[Function]}
          >
            <span
              className="content-3"
            >
              Jun 10, 2017 - 05:57 PM
            </span>
          </div>
          <div
            className="line-item-data list-test-class"
            onClick={[Function]}
          >
            <span
              className="content-3"
            >
              May 10, 2017 - 05:57 PM
            </span>
          </div>
          <div
            className="line-item-data-selected list-test-class"
            onClick={[Function]}
          >
            <span
              className="content-3"
            >
              Apr 10, 2017 - 05:57 PM
            </span>
          </div>
          <div
            className="line-item-data list-test-class"
            onClick={[Function]}
          >
            <span
              className="content-3"
            >
              Mar 10, 2017 - 05:57 PM
            </span>
          </div>
        </div>
      </div>
    </ModalBody>
    <ModalFooter
      className="dialog-footer"
      tag="div"
    >
      <div
        className="dialog-footer modal-footer"
      >
        <p>
          If a new version of the data is released at the source, a notification will be sent to your email address.
        </p>
        <div
          className="button-gray mr-3 action-button test-cancel-button"
          onClick={[Function]}
        >
          Cancel Alert
        </div>
        <div
          className="button-blue action-button test-ok-button"
          onClick={[Function]}
        >
          Apply
        </div>
      </div>
    </ModalFooter>
  </div>
</div>
`;

exports[`DataVersionSelect Renders correctly when in Private mode, and selection is confirmed when user hits OK 3`] = `
<DataVersionSelect
  api={
    Object {
      "getWfModuleVersions": [Function],
      "setWfModuleVersion": [Function],
    }
  }
  isReadOnly={false}
  revision={202}
  setClickNotification={[Function]}
  testing={true}
  wfModuleId={808}
>
  <div
    className="version-item"
  >
    <div
      className="t-d-gray content-3 mb-2"
    >
      Version 5 of 5
    </div>
    <div>
      <div
        className="open-modal t-f-blue content-4 text-center"
        onClick={[Function]}
      >
        Jul 10, 2017 - 05:57 PM
      </div>
      <Modal
        autoFocus={true}
        backdrop={true}
        backdropTransitionTimeout={150}
        className="modal-dialog"
        fade={true}
        isOpen={false}
        keyboard={true}
        modalTransitionTimeout={300}
        toggle={[Function]}
        zIndex={1050}
      />
    </div>
  </div>
</DataVersionSelect>
`;
